cabal-version:      2.4
name:               r-blacklist
version:            0.1.0.0
homepage:           https://github.com/jhrcek/r-blacklist
license:            BSD-3-Clause
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2021 Author name here
category:           Web
build-type:         Simple
extra-source-files: README.md

executable r-blacklist
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base      >=4.7 && <5
    , inline-r
